--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,29 +1,29 @@
 {
   "nav": {
-    "home": "Accueil",
-    "expertises": "Nos Expertises",
-    "gerard": "Notre Vision",
-    "caseStudies": "Cas clients",
+    "home": "Home",
+    "expertises": "Our Expertises",
+    "gerard": "Our Vision",
+    "caseStudies": "They Trust Us",
     "blog": "Blog",
     "contact": "Contact",
-    "careers": "Carrières",
-    "quote": "Votre projet nous intéresse"
+    "careers": "Careers",
+    "quote": "Your project interests us"
   },
   "hero": {
-    "chip": "Collectif d'ingénierie",
+    "chip": "Engineering Collective",
     "headline": "LLEDO Industries",
-    "headlineAccent": "groupe industriel intégré",
-    "subheadline": "Ingénierie, usinage de précision et maintenance pour l'aéronautique et la défense depuis 1989. Un collectif d'experts réunissant MPEB, EGI, FREM et MGP pour piloter vos projets de bout en bout.",
-    "ctaPrimary": "Nous contacter",
-    "ctaSecondary": "Découvrir nos expertises",
+    "headlineAccent": "integrated industrial group",
+    "subheadline": "Engineering, precision machining and industrial maintenance for aerospace and defense since 1989. A collective of experts bringing together MPEB, EGI, FREM and MGP to manage your projects from start to finish.",
+    "ctaPrimary": "Contact us",
+    "ctaSecondary": "Discover our expertise",
     "badges": {
-      "compliance": "Ingénierie & usinage intégrés",
-      "cmu": "70 collaborateurs certifiés EN 9100",
+      "compliance": "Integrated engineering & machining",
+      "cmu": "5 companies on 2 sites",
       "certs": "ISO 9001 & EN 9100"
     },
-    "productLabel": "Division AEROTOOLS – expertise GSE",
+    "productLabel": "AEROTOOLS Division – GSE expertise",
     "trust": {
-      "title": "Plus de 70 clients nous font confiance",
+      "title": "Many prestigious clients already trust us, why not you?",
       "brands": [
         "Airbus Helicopters",
         "Safran",
