--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,13 +1,16 @@
 {
   "nav": {
     "home": "Home",
-    "expertises": "Our Expertises",
-    "gerard": "Our Vision",
-    "caseStudies": "They Trust Us",
+    "expertises": "Our means and industrial tools",
+    "vision": "LLEDO Industries Group",
+    "trust": "They Trust Us",
     "blog": "Blog",
+    "products": "Products",
     "contact": "Contact",
+    "gerard": "LLEDO Industries Group",
+    "caseStudies": "They Trust Us",
     "careers": "Careers",
-    "quote": "Your project interests us"
+    "quote": "Get a quote"
   },
   "hero": {
     "chip": "Engineering Collective",
@@ -18,6 +21,7 @@
     "ctaSecondary": "Discover our expertise",
     "badges": {
       "compliance": "Integrated engineering & machining",
+      "experience": "Over 36 years of expertise",
       "cmu": "5 companies on 2 sites",
       "certs": "ISO 9001 & EN 9100"
     },
@@ -150,7 +154,7 @@
         "expertises": "Nos Expertises",
         "brochure": "Télécharger la plaquette",
         "caseStudies": "Cas clients",
-        "quote": "Votre projet nous intéresse"
+        "quote": "Get a quote"
       }
     },
     "resources": {
